--- a/terminal-tools/package.json
+++ b/terminal-tools/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@slidev/cli": "^0.38.2",
+    "@slidev/theme-apple-basic": "^0.20.0",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
   }
